polish part c (refactoring) of day-2 oop exercises

--- a/11-python-oop/day-2.ipynb
+++ b/11-python-oop/day-2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "11ac46f8",
    "metadata": {},
    "outputs": [],
@@ -62,6 +62,7 @@
     "            raise ValueError(\n",
     "                \"Can only pass a str or an Iterable of Query objects\"\n",
     "            )\n",
+    "\n",
     "    def __iter__(self):\n",
     "        return iter(self.query_list)\n",
     "\n",
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bc60f04c",
    "metadata": {},
    "outputs": [],
@@ -156,7 +157,7 @@
     "        for i in range(3):\n",
     "            answer = None\n",
     "            while answer is None:\n",
-    "                answer = input(f\"you got {3 - i} tries: \")\n",
+    "                answer = input(f\"you got {3 - i} attempts left: \")\n",
     "                try:\n",
     "                    answer = int(answer)\n",
     "                except:\n",
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "311416e7",
    "metadata": {},
    "outputs": [],
@@ -215,7 +216,6 @@
     "import re\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "import pandas as pd\n",
     "import logging\n",
     "import time\n",
     "import random\n",
@@ -226,45 +226,143 @@
     "logger.setLevel(logging.INFO)\n",
     "\n",
     "\n",
-    "class Player:\n",
-    "    def __init__(self, name: str, country: str, points: int):\n",
-    "        self.name = name\n",
-    "        self.country = country\n",
-    "        self.points = points\n",
-    "\n",
-    "\n",
     "class Week:\n",
-    "    def __init__(self, url: str):\n",
-    "        self.ranks = range(1, 101)\n",
-    "        self._players = None\n",
+    "    def __init__(self, html_content: str):\n",
+    "        self._soup = BeautifulSoup(html_content, \"html.parser\")\n",
+    "        self._week = self._get_active_week()\n",
+    "        self._ranks = list(range(1, 101))\n",
+    "        self._player_names = self._get_player_names()\n",
+    "        self._countries = self._get_countries()\n",
+    "        self._points_all = self._get_points()\n",
+    "        sizes = map(\n",
+    "            len,\n",
+    "            [\n",
+    "                self._ranks,\n",
+    "                self._player_names,\n",
+    "                self._countries,\n",
+    "                self._points_all,\n",
+    "            ],\n",
+    "        )\n",
+    "        if not all(v > 0 for v in sizes):\n",
+    "            logger.info(\n",
+    "                f\"week {self._week} error\\nranks: {self._ranks}\\nplayer_names: {self._player_names}\\ncountries: {self._countries} \\n points_all: {self._points_all}\"\n",
+    "            )\n",
+    "\n",
+    "    def to_list(self):\n",
+    "        return [\n",
+    "            {\n",
+    "                \"week\": self._week,\n",
+    "                \"rank\": rank,\n",
+    "                \"player_name\": player_name,\n",
+    "                \"country\": country,\n",
+    "                \"points\": points,\n",
+    "            }\n",
+    "            for rank, player_name, country, points in zip(\n",
+    "                self._ranks,\n",
+    "                self._player_names,\n",
+    "                self._countries,\n",
+    "                self._points_all,\n",
+    "            )\n",
+    "        ]\n",
+    "\n",
+    "    def _get_active_week(self) -> str:\n",
+    "        \"\"\"\n",
+    "        returns the active week, directly through scraping and not through the url\n",
+    "        unlike the get_all_urls it will extract the text contents instead of\n",
+    "        the value attribute, otherwise we would get date 'Current-Date' for our\n",
+    "        most recent date.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        select_tag = self._soup.find(\"select\", id=\"dateWeek-filter\")\n",
+    "        return select_tag.find(\"option\", selected=True).text\n",
+    "\n",
+    "    def _get_player_names(self) -> list[str]:\n",
+    "        \"\"\"\n",
+    "        returns a list of the top-100 players names ordered by rank\n",
+    "        \"\"\"\n",
+    "        li_tags = self._soup.find_all(\"li\", class_=\"name center\")\n",
+    "        return [li.find(\"span\").text for li in li_tags]\n",
+    "\n",
+    "    def _get_countries(self):\n",
+    "        \"\"\"\n",
+    "        returns a list of the top-100 players countries ordered by rank\n",
+    "        \"\"\"\n",
+    "        svg_tags = self._soup.find_all(\"svg\", class_=\"atp-flag\")[:100]\n",
+    "        use_tags = [svg_tag.find(\"use\") for svg_tag in svg_tags]\n",
+    "        links = [use_tag[\"href\"] for use_tag in use_tags]\n",
+    "        countries = [\n",
+    "            self.__class__._extract_flag_abbr(link) for link in links\n",
+    "        ]\n",
+    "        return self._convert_flag_abbr(countries)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def _extract_flag_abbr(string: str) -> str:\n",
+    "        \"\"\"\n",
+    "        extract the flag abbreviation out of a link to the flag png\n",
+    "        \"\"\"\n",
+    "        return re.search(r\"(?<=#flag-)[A-Za-z]{3}$\", string).group(0)\n",
+    "\n",
+    "    def _convert_flag_abbr(self, countries: str) -> str:\n",
+    "        \"\"\"\n",
+    "        helper function to convert a flag/country abbreviation to the\n",
+    "        actual country name. The relationship between the can be find inside\n",
+    "        the source code and I did not have rely on external sources\n",
+    "        \"\"\"\n",
+    "        select_region_filter = self._soup.find(\n",
+    "            \"select\", id=\"region-filter\"\n",
+    "        )\n",
+    "        region_option_tags = select_region_filter.find_all(\"option\")\n",
+    "        countries_tuple = [\n",
+    "            (region_option_tag[\"value\"], region_option_tag.text)\n",
+    "            for region_option_tag in region_option_tags\n",
+    "        ]\n",
+    "        country_dict = {k.lower(): v for k, v in countries_tuple}\n",
+    "        return [\n",
+    "            country_dict.get(country_abbr, country_abbr)\n",
+    "            for country_abbr in countries\n",
+    "        ]\n",
+    "\n",
+    "    def _get_points(self) -> list[str]:\n",
+    "        \"\"\"\n",
+    "        after some debugging a edge case failures, I adjusted and tested\n",
+    "        the points extraction to the following code.\n",
+    "        I essentially had to find the tag before the one I was looking for,\n",
+    "        and the seek the sibling.\n",
+    "        The reason for picking the slice is that I sometimes get 101 results\n",
+    "        instead of 100 and in that case the first one does not lead to any points.\n",
+    "        Taking the slice of the last 100 seems safe.\n",
+    "        \"\"\"\n",
+    "        points_tds = self._soup.find_all(\"td\", class_=\"age small-cell\")\n",
+    "        return [\n",
+    "            points_td.find_next_sibling(\"td\").find(\"a\").text.strip()\n",
+    "            for points_td in points_tds[-100:]\n",
+    "        ]\n",
     "\n",
     "\n",
     "class AtpDb:\n",
-    "    def __init__(self, soup: BeautifulSoup, weeks: list[Week] = None):\n",
-    "        self._weeks = [] if weeks is None else weeks\n",
-    "        self._soup = soup\n",
-    "        self.response_list = []\n",
+    "    def __init__(self):\n",
     "        self._headers = {\n",
     "            \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/115.0 Safari/537.36\"\n",
     "        }\n",
-    "\n",
-    "    def add_week(self, week):\n",
-    "        self._weeks.append(week)\n",
-    "\n",
-    "    def add_weeks(self, weeks: list[Week]):\n",
-    "        self._weeks.extend(weeks)\n",
+    "        url = \"https://www.atptour.com/en/rankings/singles\"\n",
+    "        response = requests.get(url, headers=self._headers)\n",
+    "        self._soup = BeautifulSoup(response.content, \"html.parser\")\n",
+    "        self._response_contents = self._get_response_contents()\n",
+    "        content_length = len(self._response_contents)\n",
+    "        self._weeks = []\n",
+    "        for i, html_content in enumerate(self._response_contents):\n",
+    "            logger.info(\n",
+    "                f\"parsing week {i + 1} out of {content_length}\"\n",
+    "            )\n",
+    "            self._weeks.extend(Week(html_content).to_list())\n",
     "\n",
     "    @property\n",
     "    def weeks(self):\n",
     "        return self._weeks\n",
     "\n",
-    "    @property\n",
-    "    def soup(self):\n",
-    "        return self._soup\n",
-    "\n",
-    "    def get_all_urls(self) -> list[str]:\n",
+    "    def _get_all_urls(self) -> list[str]:\n",
     "        \"\"\"Return a list with all weekly urls from the main soup object\"\"\"\n",
-    "        select_tag = self.soup.find(\"select\", id=\"dateWeek-filter\")\n",
+    "        select_tag = self._soup.find(\"select\", id=\"dateWeek-filter\")\n",
     "        date_tags = select_tag.find_all(\"option\")\n",
     "        dates = [\n",
     "            (\n",
@@ -279,10 +377,10 @@
     "        )\n",
     "        return sorted([f\"{base_url}{date}\" for date in dates])\n",
     "\n",
-    "    def get_responses(self):\n",
-    "        urls = self.get_all_urls()\n",
+    "    def _get_response_contents(self):\n",
+    "        urls = self._get_all_urls()\n",
     "        urls_length = len(urls)\n",
-    "\n",
+    "        response_content_list = []\n",
     "        for i, url in enumerate(urls):\n",
     "            logger.info(\n",
     "                f\"processing request {i + 1} out of {urls_length}\"\n",
@@ -290,263 +388,34 @@
     "            time.sleep(random.uniform(0.3, 0.4))\n",
     "            response = requests.get(url, headers=self._headers)\n",
     "            if response.status_code != 200:\n",
-    "                response_list = []\n",
+    "                response_content_list = []\n",
     "                raise ConnectionError(\n",
     "                    f\"failed to fetch data from {url}\"\n",
     "                )\n",
-    "            self.response_list.append(response)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "668a43e6",
-   "metadata": {},
-   "source": [
-    "#### Original Exercise"
+    "            response_content_list.append(response.content)\n",
+    "        return response_content_list"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aac6db92",
+   "id": "3ddd096d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "\n",
-    "\n",
-    "def get_all_urls(soup: BeautifulSoup) -> list[str]:\n",
-    "    \"\"\"Return a list with all weekly urls from the main soup object\"\"\"\n",
-    "    select_tag = soup.find(\"select\", id=\"dateWeek-filter\")\n",
-    "    date_tags = select_tag.find_all(\"option\")\n",
-    "    dates = [date_tag[\"value\"] if not \"Current\" in date_tag[\"value\"] else \"Current+Date\" for date_tag in date_tags]\n",
-    "    base_url = \"https://www.atptour.com/en/rankings/singles?dateWeek=\"\n",
-    "    return sorted([f\"{base_url}{date}\" for date in dates])\n",
-    "\n",
-    "\n",
-    "def get_active_week(soup: BeautifulSoup) -> str:\n",
-    "    \"\"\"\n",
-    "    returns the active week, directly through scraping and not through the url\n",
-    "    unlike the get_all_urls it will extract the text contents instead of \n",
-    "    the value attribute, otherwise we would get date 'Current-Date' for our\n",
-    "    most recent date.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    select_tag = soup.find(\"select\", id=\"dateWeek-filter\")\n",
-    "    return select_tag.find(\"option\", selected=True).text\n",
-    "\n",
-    "\n",
-    "def get_player_names(soup: BeautifulSoup) -> list[str]:\n",
-    "    \"\"\"\n",
-    "    returns a list of the top-100 players names ordered by rank\n",
-    "    \"\"\"\n",
-    "    li_tags = soup.find_all(\"li\", class_=\"name center\")\n",
-    "    return [li.find(\"span\").text for li in li_tags]\n",
-    "\n",
-    "\n",
-    "def get_countries(soup: BeautifulSoup) -> list[str]:\n",
-    "    \"\"\"\n",
-    "    returns a list of the top-100 players countries ordered by rank\n",
-    "    \"\"\"\n",
-    "    svg_tags = soup.find_all(\"svg\", class_=\"atp-flag\")[:100]\n",
-    "    use_tags = [svg_tag.find(\"use\") for svg_tag in svg_tags]\n",
-    "    links = [use_tag[\"href\"] for use_tag in use_tags]\n",
-    "    countries = [_extract_flag_abbr(link) for link in links]\n",
-    "    return _convert_flag_abbr(soup, countries)\n",
-    "\n",
-    "\n",
-    "def _extract_flag_abbr(string: str) -> str:\n",
-    "    \"\"\"\n",
-    "    extract the flag abbreviation out of a link to the flag png\n",
-    "    \"\"\"\n",
-    "    return re.search(r\"(?<=#flag-)[A-Za-z]{3}$\", string).group(0)\n",
-    "\n",
-    "\n",
-    "def _convert_flag_abbr(\n",
-    "    soup: BeautifulSoup, countries: list[str]\n",
-    ") -> str:\n",
-    "    \"\"\"\n",
-    "    helper function to convert a flag/country abbreviation to the \n",
-    "    actual country name. The relationship between the can be find inside\n",
-    "    the source code and I did not have rely on external sources\n",
-    "    \"\"\"\n",
-    "    select_region_filter = soup.find(\"select\", id=\"region-filter\")\n",
-    "    region_option_tags = select_region_filter.find_all(\"option\")\n",
-    "    countries_tuple = [\n",
-    "        (region_option_tag[\"value\"], region_option_tag.text)\n",
-    "        for region_option_tag in region_option_tags\n",
-    "    ]\n",
-    "    country_dict = {k.lower(): v for k, v in countries_tuple}\n",
-    "    return [\n",
-    "        country_dict.get(country_abbr, country_abbr)\n",
-    "        for country_abbr in countries\n",
-    "    ]\n",
-    "\n",
-    "\n",
-    "def get_points(soup: BeautifulSoup) -> list[str]:\n",
-    "    \"\"\"\n",
-    "    after some debugging a edge case failures, I adjusted and tested\n",
-    "    the points extraction to the following code.\n",
-    "    I essentially had to find the tag before the one I was looking for, \n",
-    "    and the seek the sibling.\n",
-    "    The reason for picking the slice is that I sometimes get 101 results \n",
-    "    instead of 100 and in that case the first one does not lead to any points.\n",
-    "    Taking the slice of the last 100 seems safe.\n",
-    "    \"\"\"\n",
-    "    points_tds = soup.find_all(\"td\", class_=\"age small-cell\")\n",
-    "    return [\n",
-    "        points_td.find_next_sibling(\"td\").find(\"a\").text.strip()\n",
-    "        for points_td in points_tds[-100:]\n",
-    "    ]"
+    "df = pd.DataFrame(AtpDb().weeks)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1b08999e",
+   "execution_count": 4,
+   "id": "ea4109eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "headers = {\n",
-    "    \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/115.0 Safari/537.36\"\n",
-    "}\n",
-    "\n",
-    "url = \"https://www.atptour.com/en/rankings/singles\"\n",
-    "response = requests.get(url, headers=headers)\n",
-    "response.status_code\n",
-    "# Check status code\n",
-    "if response.status_code != 200:\n",
-    "    print(response.status_code, response.reason)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "584c5662",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soup = BeautifulSoup(response.content, 'html.parser')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8439bda2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import logging\n",
-    "\n",
-    "logger = logging.getLogger(__name__)\n",
-    "logger.addHandler(logging.FileHandler(\"log.txt\"))\n",
-    "logger.setLevel(logging.INFO)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eba0186b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# gather all responses\n",
-    "\n",
-    "import time\n",
-    "import random\n",
-    "\n",
-    "\n",
-    "urls = get_all_urls(soup)\n",
-    "urls_length = len(urls)\n",
-    "\n",
-    "response_list = []\n",
-    "\n",
-    "for i, url in enumerate(urls):\n",
-    "    logger.info(f\"processing request {i + 1} out of {urls_length}\")\n",
-    "    time.sleep(random.uniform(0.3, 0.4))\n",
-    "    response = requests.get(url, headers=headers)\n",
-    "    if response.status_code != 200:\n",
-    "        response_list = []\n",
-    "        raise ConnectionError(f'failed to fetch data from {url}')\n",
-    "    response_list.append(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd9dc892",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save html to files\n",
-    "for i, response in enumerate(response_list):\n",
-    "    if response and response.status_code == 200:\n",
-    "        with open(f\"pages/page_{i}.html\", \"wb\") as f:\n",
-    "            f.write(response.content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6427ac79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#load files to a list of html text\n",
-    "import glob\n",
-    "\n",
-    "content_list = []\n",
-    "file_paths = sorted(glob.glob(\"pages/page_*.html\"))\n",
-    "\n",
-    "for file_path in file_paths:\n",
-    "    with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
-    "        content_list.append(f.read())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1197abd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# convert all elements of the html list to a list of soup objects (parsed)\n",
-    "# extract data and load them into a list of dictionaries\n",
-    "content_length = len(content_list)\n",
-    "results_list = []\n",
-    "\n",
-    "for i, content in enumerate(content_list):\n",
-    "    logger.info(f\"processing response {i + 1} out of {content_length}\")\n",
-    "    soup = BeautifulSoup(content, \"html.parser\")\n",
-    "    week = get_active_week(soup)\n",
-    "    ranks = list(range(1, 101))\n",
-    "    player_names = get_player_names(soup)\n",
-    "    countries = get_countries(soup)\n",
-    "    points_all = get_points(soup)\n",
-    "    sizes = map(len, [ranks, player_names, countries, points_all])\n",
-    "    # if not len(set(sizes)) == 1 or not all(v > 0 for v in sizes):\n",
-    "    if not all(v > 0 for v in sizes):\n",
-    "        logger.info(\n",
-    "            f\"week {week} error\\nranks: {ranks}\\nplayer_names: {player_names}\\ncountries: {countries} \\n points_all: {points_all}\"\n",
-    "        )\n",
-    "\n",
-    "    results_list.extend(\n",
-    "        [\n",
-    "            {\n",
-    "                \"week\": week,\n",
-    "                \"rank\": rank,\n",
-    "                \"player_name\": player_name,\n",
-    "                \"country\": country,\n",
-    "                \"points\": points,\n",
-    "            }\n",
-    "            for rank, player_name, country, points in zip(\n",
-    "                ranks, player_names, countries, points_all\n",
-    "            )\n",
-    "        ]\n",
-    "    )"
+    "df.to_pickle('df.pkl')"
    ]
   }
  ],
