just aesthetics  (spark exercises)

--- a/15-pyspark/day-1.ipynb
+++ b/15-pyspark/day-1.ipynb
@@ -707,7 +707,18 @@
    "id": "1868cdc1",
    "metadata": {},
    "source": [
-    "12. Create a master view that gathers the following info for all current employees:"
+    "12. Create a master view that gathers the following info for all current employees:  \n",
+    "    1. employee id\n",
+    "    2. employee salary\n",
+    "    3. name of department\n",
+    "    4. manager's id\n",
+    "    5. manager's name\n",
+    "    6. Managere's full name\n",
+    "    7. employee's full name\n",
+    "    8. current title\n",
+    "    9. date hired in company\n",
+    "    10. date started current role\n",
+    "    11. years in company hint:  use function created for age this time instead of current year - birth year pass hire year"
    ]
   },
   {
